Add cy placeholder pages

--- a/src/pages/cy/index.astro
+++ b/src/pages/cy/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '../../layouts/BaseLayout.astro';
+import BaseLayout from '@layouts/BaseLayout.astro';
 const pageTitle = 'Hafan';
 ---
 
@@ -7,5 +7,5 @@ const pageTitle = 'Hafan';
   pageTitle={pageTitle}
   mainClass="home-main"
 >
-    Bore da!
+  Bore da!
 </BaseLayout>
