--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,12 +1,10 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
-import BlogLayout from '../../layouts/BlogLayout.astro'
-const pageTitle = 'Blog'
+import BlogLayout from '../../layouts/BlogLayout.astro';
+const pageTitle = 'Blog';
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-    <BlogLayout>
-        
-    </BlogLayout>
+  EN Blog
+  <BlogLayout />
 </BaseLayout>
-
