update all layout imports with aliases

--- a/src/pages/accessibility.astro
+++ b/src/pages/accessibility.astro
@@ -1,8 +1,6 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-const pageTitle = 'Accessibility'
+import BaseLayout from '@layouts/BaseLayout.astro';
+const pageTitle = 'Accessibility';
 ---
 
-<BaseLayout pageTitle={pageTitle}>
-</BaseLayout>
-
+<BaseLayout pageTitle={pageTitle} />
