--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,6 +1,6 @@
 ---
-import BaseLayout from '../../layouts/BaseLayout.astro';
-import BlogLayout from '../../layouts/BlogLayout.astro';
+import BaseLayout from '@layouts/BaseLayout.astro';
+import BlogLayout from '@layouts/BlogLayout.astro';
 const pageTitle = 'Blog';
 ---
 
