--- a/src/pages/docs.astro
+++ b/src/pages/docs.astro
@@ -1,9 +1,12 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Docs";
+import BaseLayout from '@layouts/BaseLayout.astro';
+const pageTitle = 'Docs';
 ---
 
-<BaseLayout pageTitle={pageTitle} mainClass="docs-main">
+<BaseLayout
+  pageTitle={pageTitle}
+  mainClass="docs-main"
+>
   <p>
     See the <a
       href="https://github.com/UniversalViewer/universalviewer/wiki/UV-Examples"
