--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -1,20 +1,32 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Events";
+import BaseLayout from '@layouts/BaseLayout.astro';
+const pageTitle = 'Events';
 ---
 
-<BaseLayout pageTitle={pageTitle} mainClass="events-main">
+<BaseLayout
+  pageTitle={pageTitle}
+  mainClass="events-main"
+>
   <h1>Events</h1>
   <section class="upcoming-events">
     <h2>Upcoming Events</h2>
     <div class="events-row">
-      <a href="#" class="event-card">
+      <a
+        href="#"
+        class="event-card"
+      >
         <div class="event-placeholder"></div>
       </a>
-      <a href="#" class="event-card">
+      <a
+        href="#"
+        class="event-card"
+      >
         <div class="event-placeholder"></div>
       </a>
-      <a href="#" class="event-card">
+      <a
+        href="#"
+        class="event-card"
+      >
         <div class="event-placeholder"></div>
       </a>
     </div>
@@ -25,17 +37,27 @@ const pageTitle = "Events";
     width="800"
     height="600"
     frameborder="0"
-    scrolling="no"></iframe>
+    scrolling="no"
+  ></iframe>
   <section class="event-categories">
     <h2>Event Categories</h2>
     <div class="events-row">
-      <a href="#" class="event-card">
+      <a
+        href="#"
+        class="event-card"
+      >
         <div class="event-placeholder"></div>
       </a>
-      <a href="#" class="event-card">
+      <a
+        href="#"
+        class="event-card"
+      >
         <div class="event-placeholder"></div>
       </a>
-      <a href="#" class="event-card">
+      <a
+        href="#"
+        class="event-card"
+      >
         <div class="event-placeholder"></div>
       </a>
     </div>
@@ -43,13 +65,22 @@ const pageTitle = "Events";
   <section class="past-events">
     <h2>Past Events</h2>
     <div class="events-row">
-      <a href="#" class="event-card">
+      <a
+        href="#"
+        class="event-card"
+      >
         <div class="event-placeholder"></div>
       </a>
-      <a href="#" class="event-card">
+      <a
+        href="#"
+        class="event-card"
+      >
         <div class="event-placeholder"></div>
       </a>
-      <a href="#" class="event-card">
+      <a
+        href="#"
+        class="event-card"
+      >
         <div class="event-placeholder"></div>
       </a>
     </div>
