--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -1,7 +1,6 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-const pageTitle = 'Roadmap'
+import BaseLayout from '@layouts/BaseLayout.astro';
+const pageTitle = 'Roadmap';
 ---
 
-<BaseLayout pageTitle={pageTitle}>
-</BaseLayout>
+<BaseLayout pageTitle={pageTitle} />
