--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,7 @@ const currentPathWithoutLocale = currentPath.replace(urlPrefix, '') || '/';
     <ul class="main-nav-list">
       <li class="main-nav-list-item">
         <a
-          href={href('')}
+          href={href('/')}
           class="main-nav-link"
           >Home</a
         >
