blog structure started

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -50,7 +50,7 @@ const currentPathWithoutLocale = currentPath.replace(urlPrefix, '') || '/';
       </li>
       <li class="main-nav-list-item">
         <a
-          href={href('/blog')}
+          href="/blog"
           class="main-nav-link"
           >Blog</a
         >
