--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -24,7 +24,7 @@ function postUrl(p: any) {
 <article>
   <header>
     <h1>{title}</h1>
-    <p class="post-data">
+    <p class="post-date">
       <time datetime={date.toISOString()}>{formattedDate}</time>
     </p>
     {
