--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -23,10 +23,10 @@ function postUrl(p: any) {
 
 <article>
   <header>
-    <h1>{title}</h1>
     <p class="post-date">
       <time datetime={date.toISOString()}>{formattedDate}</time>
     </p>
+    <h1>{title}</h1>
     {
       author && (
         <p>
@@ -36,10 +36,7 @@ function postUrl(p: any) {
     }
   </header>
   <slot />
-  <nav
-    class="post-nav"
-    style="display:flex;gap:3em;justify-content:space-between"
-  >
+  <nav class="post-nav">
     {
       prev && (
         <div class="prev-post">
