--- a/src/components/MainNav.astro
+++ b/src/components/MainNav.astro
@@ -6,49 +6,53 @@ const href = (p: string) => `${urlPrefix}${p}`;
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
-<nav class="main-nav">
-    <ul class="main-nav-list">
-      <li class="main-nav-list-item">
-        <a
-          href={href('/')}
-          class="main-nav-link"
-          >{t('nav.home')}</a
-        >
-      </li>
-      <li class="main-nav-list-item">
-        <a
-          href={href('/demo')}
-          class="main-nav-link"
-          >{t('nav.demo')}</a
-        >
-      </li>
-      <li class="main-nav-list-item">
-        <a
-          href={href('/events')}
-          class="main-nav-link"
-          >{t('nav.events')}</a
-        >
-      </li>
-      <li class="main-nav-list-item">
-        <a
-          href={href('/docs')}
-          class="main-nav-link"
-          >{t('nav.documentation')}</a
-        >
-      </li>
-      <li class="main-nav-list-item">
-        <a
-          href="/blog"
-          class="main-nav-link"
-          >{t('nav.blog')}</a
-        >
-      </li>
-      <li class="main-nav-list-item">
-        <a
-          href={href('/community')}
-          class="main-nav-link"
-          >{t('nav.community')}</a
-        >
-      </li>
-    </ul>
-  </nav>
+
+<nav
+  id="mainNav"
+  class="main-nav"
+>
+  <ul class="main-nav-list">
+    <li class="main-nav-list-item">
+      <a
+        href={href('/')}
+        class="main-nav-link"
+        >{t('nav.home')}</a
+      >
+    </li>
+    <li class="main-nav-list-item">
+      <a
+        href={href('/demo')}
+        class="main-nav-link"
+        >{t('nav.demo')}</a
+      >
+    </li>
+    <li class="main-nav-list-item">
+      <a
+        href={href('/events')}
+        class="main-nav-link"
+        >{t('nav.events')}</a
+      >
+    </li>
+    <li class="main-nav-list-item">
+      <a
+        href={href('/docs')}
+        class="main-nav-link"
+        >{t('nav.documentation')}</a
+      >
+    </li>
+    <li class="main-nav-list-item">
+      <a
+        href="/blog"
+        class="main-nav-link"
+        >{t('nav.blog')}</a
+      >
+    </li>
+    <li class="main-nav-list-item">
+      <a
+        href={href('/community')}
+        class="main-nav-link"
+        >{t('nav.community')}</a
+      >
+    </li>
+  </ul>
+</nav>
