--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -17,4 +17,85 @@
   height: remval(64);
   background: #fff;
   border-radius: 50%;
+  order: 1;
+}
+
+.mobile-main-nav-button {
+  order: 3;
+  background: transparent;
+  border: none;
+  margin: 0 0 0 remval(16);
+  padding: 0;
+  position: relative;
+  width: remval(44);
+  height: remval(44);
+  cursor: pointer;
+  opacity: 0.85;
+
+  &:hover {
+    opacity: 1;
+  }
+
+  @media screen and (min-width: #{map.get($breakpoints, "tablet-l")}) {
+    display: none;
+  }
+}
+
+.hamburger {
+  text-align: left;
+}
+
+.hamburger-box {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: remval(38);
+  height: remval(38);
+}
+
+.hamburger-inner,
+.hamburger-inner::before,
+.hamburger-inner::after {
+  transition-timing-function: ease;
+  transition-duration: 0.15s;
+  transition-property: transform;
+}
+
+.hamburger-inner {
+  display: block;
+  position: absolute;
+  top: 50%;
+  height: remval(4);
+  width: 100%;
+  margin-top: remval(-2);
+  background-color: #fff;
+  border-radius: remval(4);
+}
+
+.hamburger-inner::before,
+.hamburger-inner::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background-color: inherit;
+  border-radius: remval(8);
+}
+
+.hamburger-inner::before {
+  top: remval(-10);
+}
+
+.hamburger-inner::after {
+  top: remval(10);
+}
+
+.hamburger.active .hamburger-inner::before {
+  transform: translate3d(-10px, 3px, 0) rotate(-45deg) scale(0.6, 1);
+}
+
+.hamburger.active .hamburger-inner::after {
+  transform: translate3d(-10px, -3px, 0) rotate(45deg) scale(0.6, 1);
 }
