--- a/src/styles/_lang-nav.scss
+++ b/src/styles/_lang-nav.scss
@@ -5,12 +5,17 @@
 
 .languages-container {
   position: relative;
-  flex-grow: 1;
-  flex-basis: 100%;
+  order: 2;
+  margin-left: auto;
 
   @media screen and (min-width: #{map.get($breakpoints, "tablet")}) {
     flex-grow: 0;
     flex-basis: auto;
+  }
+
+  @media screen and (min-width: #{map.get($breakpoints, "tablet-l")}) {
+    order: 5;
+    margin-left: 0;
   }
 }
 
